# docx-comments-mcp

./: .gitignore  README.md  pyproject.toml
src/docx_comments_mcp/: __init__.py  reader.py  server.py  writer.py  xml_helpers.py
tests/: conftest.py  test_e2e.py  test_reader.py  test_server.py  test_writer.py
