[project]
name = "docx-comments-mcp"
version = "0.1.0"
description = "MCP server for reading and writing Word document comments and track changes"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Josh" }]
keywords = ["mcp", "claude", "word", "docx", "comments", "track-changes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "python-docx>=1.1.0",
    "lxml>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/kosh-jelly/docx-comments-mcp"
Repository = "https://github.com/kosh-jelly/docx-comments-mcp"
Issues = "https://github.com/kosh-jelly/docx-comments-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
docx-comments-mcp = "docx_comments_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docx_comments_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
